# Academix-AI

AI-backend/: main.py  pyproject.toml
AI-backend/models/: quizModel.py
AI-backend/routes/: quizRoute.py
AI-backend/schemas/: quizSchema.py
AI-backend/services/: quizService.py
server/: .gitignore  package-lock.json  package.json  server.js
server/src/: app.js
server/src/controllers/: instituteController.js
server/src/models/: coursesModel.js  studentModel.js  teacherModel.js
server/src/routes/: instituteRoutes.js
